# slurm_testing

./: .gitignore  .markdownlint.yml  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/scripts/: correlate_regtest_lite.SLURM  failed_regtest_lite.SLURM  failed_run_regtest_lite.SLURM  launch_regtest_lite.SLURM  launch_status.SLURM  local_fork_repo_url.py  push_to_github.SLURM  run_regtest_lite.SLURM  status.SLURM  status.py  status_regtest_lite.SLURM  wait_for_git_lock.sh
.github/workflows/: correlate.yaml  correlate.yml  initiate_check.yaml  initiate_check.yml  launch_status.yml  match_target_repository.yaml  post_comment.yaml  run_failed.yml  run_intiated.yml  🚫👤💰.yaml
Regression Testing/: README.md  abcd-options_symlink_v1.8.4.sh  corrtest_default_HNU_1.yml  data_config_regtest.yml  data_config_regtest_HNU_1.yml  data_config_regtest_KKI.yml  data_config_regtest_Site-CBIC.yml  data_config_regtest_Site-SI.yml  data_config_regtest_single.yml  default_symlink_v1.8.4.sh  format_dir.sh  ndmg_symlink_v1.8.4.sh  regtest_job.sh  regtest_job_seed.sh
cpac_slurm_testing/pipeline_configs/: fmriprep-options_seed.yaml  ndmg_seed.yaml  rbc-options_seed.yaml
cpac_slurm_testing/status/: __init__.py  _global.py  status.py
cpac_slurm_testing/templates/: lite_run.ftxt
data_configs/: data_config_regtest_HNU_1.yml  data_config_regtest_KKI.yml  data_config_regtest_Site-CBIC.yml  data_config_regtest_Site-SI.yml  data_config_regtest_nhp.yml  data_config_regtest_rodent.yml
pipeline_configs/: abcd-options_seed.yml  benchmark-FNIRT_seed.yml  ccs-options_seed.yml  default-bet_seed.yml  default_seed.yml  fmriprep-options_seed.yml  fx-options_seed.yml  monkey_seed.yml  ndmg_seed.yml  rbc-options_seed.yml  rodent_seed.yml
regression_run_scripts/: build_image.sh  regtest_correlations.sh  regtest_job_cpac_code.sh  regtest_job_seed.sh  regtest_lite.sh
src/cpac_slurm_testing/: __init__.py  git_remote.py  launch.py
src/cpac_slurm_testing/correlation/: __init__.py  correlation.py  git_utils.py  push_branch.py
src/cpac_slurm_testing/pipeline_configs/: abcd-options_seed.yaml  benchmark-FNIRT_seed.yaml  ccs-options_seed.yaml  default-5mm.yaml  default-bet_seed.yaml  default_seed.yaml  fx-options_seed.yaml  monkey_seed.yaml  rodent_seed.yaml
src/cpac_slurm_testing/regression_run_scripts/: build_image.sh  regtest_correlations.sh  regtest_full.py  regtest_full.sh  regtest_job_cpac_code.sh  regtest_job_seed.sh  regtest_lite.sh
src/cpac_slurm_testing/status/: __init__.py  _global.py  cli.py  status.py
src/cpac_slurm_testing/templates/: full_run.ftxt  lite_run.ftxt
src/cpac_slurm_testing/utils/: __init__.py  _typing.py  datapaths.py  typing.py  utils.py
symlink_pipelines/: abcd-options_symlink_v1.8.4.sh  benchmark-FNIRT_symlink_v1.8.4.sh  ccs-options_symlink_v1.8.4.sh  default_symlink_v1.8.4.sh  fmriprep-options_symlink_v1.8.4.sh  fx-options_symlink_v1.8.4.sh  monkey_symlink_v1.8.4.sh  ndmg_symlink_v1.8.4.sh  rodent_symlink_v1.8.4.sh
